# showdown-stack

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
dashboard-web/: index.html  package-lock.json  package.json  vite.config.ts
dashboard-web/src/: App.tsx  styles.css  types.ts
docs/: DEMO.md  PROXY_RUN.md
extension/: .gitignore  config.ts  package-lock.json  package.json  wxt.config.ts
extension/data/: chaos-priors-flat.json  chaos-teammates-flat.json
extension/entrypoints/: content.ts
extension/lib/: belief-snapshot.ts  conflict.ts  damage-matrix.ts  explainer.ts  matchup-plan.ts  panel-mount.ts  plan-fit.ts  plan-lifecycle.ts  pokemon-types.ts  preview-grounding.ts  preview-plan-client.ts  showdown-dex.ts  snapshot.ts  tabs.ts  threats.ts  (+3 more)
scripts/: evaluate-preview-plans.py  extract_ability_pools.py  mechanics_fact_poc.py  replay-engine-eval-cases.py  restart-engine.sh  run-engine-tuned.sh  start-demo-stack.sh  start-wxt.sh
tests/: test_adapter_ext.py  test_belief.py  test_belief_phase2.py  test_belief_phase2_inference.py  test_belief_replay.py  test_copilot_cli.py  test_dashboard.py  test_engine_client.py  test_legality.py  test_llm.py  test_mechanics_facts.py  test_models.py  test_preview_grounding.py  test_preview_plan.py  test_preview_sanitize.py  test_preview_verifier.py  test_priors.py  test_priors_hp_and_scarf.py  test_proxy.py  test_proxy_pimc.py  test_proxy_speed.py  test_spectator.py  test_speed_inference_hooks.py  test_stats.py  test_transform_overlay.py  test_tui.py
userscript/: showdown-copilot.user.js
(+118 files in other folders)
