[project]
name = "showdown-copilot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "poke-env==0.14.0",
    "httpx>=0.27.0",
    "textual>=0.80",
    "smog-usage-stats>=1.0.8",
    "battle-testing @ file:///Users/edkiboma/Projects/pokemon-ai/battle-testing",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]
proxy = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.scripts]
copilot = "showdown_copilot.copilot:main"
sc-proxy = "showdown_copilot.proxy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/showdown_copilot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
